Refactiring: изменить текст кнопки

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
               />
               <span class="popup__error avatar-input-error"></span>
             </fieldset>
-            <button type="submit" class="popup__button popup__button_type_save">
+            <button type="submit" class="popup__button popup__button_type_avatar">
               Сохранить
             </button>
           </form>
